# vulkan-gameengine-test

./: .ccls  .gitignore  CMakeLists.txt  README.md  UEngine.cpp  UEngine.hpp  compile_commands.json  main.cpp
lib/: GameObject.cpp  UniformBuffer.cpp
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
